scripts/nullaway/original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8.txt
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/Loop.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields loopThread (line 23), errCB (line 26) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public Loop () {
         ^
    (see http://t.uber.com/nullaway )
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/DNSLoop.java:25: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
          callback.addr(addr, null);
                              ^
    (see http://t.uber.com/nullaway )
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/DNSLoop.java:27: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
          callback.addr(null, uhe); 
                        ^
    (see http://t.uber.com/nullaway )
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/CloseSemanticsTest.java:178: error: [NullAway] passing @Nullable parameter 'ioe.getMessage()' where @NonNull is required
        check(ioe.getMessage());
                            ^
    (see http://t.uber.com/nullaway )
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/stress/TimeoutStressTest.java:85: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return null;
    ^
    (see http://t.uber.com/nullaway )
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/Test.java:44: error: [NullAway] initializer method does not guarantee @NonNull fields client (line 38), server (line 39) are initialized along all control-flow paths (remember to check for exceptions or early returns).
  public Test (){}
         ^
    (see http://t.uber.com/nullaway )
../original/url85460dd114_a2800276_event_java_tgz-pJ8-event_CloseSemanticsTestJ8/src/event/EchoTest.java:76: error: [NullAway] @NonNull field EchoTest$Client.bytes not initialized
    byte [] bytes;
            ^
    (see http://t.uber.com/nullaway )
7 errors
